server/transformer_working_test.log
(node:57758) [MODULE_TYPELESS_PACKAGE_JSON] Warning: Module type of file:///Users/pratik/Desktop/Jadoo/server/server/utils/transformer%202.js is not specified and it doesn't parse as CommonJS.
Reparsing as ES module because module syntax was detected. This incurs a performance overhead.
To eliminate this warning, add "type": "module" to /Users/pratik/Desktop/Jadoo/package.json.
(Use `node --trace-warnings ...` to show where the warning was created)
file:///Users/pratik/Desktop/Jadoo/server/server/utils/transformer%202.js:5
import REMOVED_SECRETfrom "../../supabaseClient.js";
                          ^^^^^^^^^^^^^^^^^^^^^^^^^

SyntaxError: Unexpected string
    at compileSourceTextModule (node:internal/modules/esm/utils:351:16)
    at ModuleLoader.moduleStrategy (node:internal/modules/esm/translators:107:18)
    at #translate (node:internal/modules/esm/loader:546:12)
    at ModuleLoader.loadAndTranslate (node:internal/modules/esm/loader:593:27)
    at async #link (node:internal/modules/esm/module_job:173:19)

Node.js v24.3.0
